[project]
name = "flatfile-to-xml-zip"
version = "0.1.0"
description = "Tool to extract individual XML records from flat-file, rename with relevant id prefix, and compress them into a ZIP archive."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "polars>=1.34.0",
]
